trying fixing one more time dark mode background

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -17,25 +17,28 @@
   --accent-color: #FF0070;
   --menu-text-color: #FF0070;
   --main-dark-bg-image: url('../images/cover-image-dark.png');
+
 }
+
 
 .theme-dark,
  .header {
   background-image: url('../images/cover-image-dark.png');
-}
 
-.theme-dark .page {
-  background-image: var(--main-dark-bg-image);
-  .header {
-    background-image: var(--main-dark-bg-image);
-  }
-
+  .text-article {
+    color: #F1B2CE;
+    }
+    
   .content-section_title {
     color: #FF0070;
   }
-  
-  .text-article {
-      color: #F1B2CE;
+
+  .page {
+    background-color: #000028;
   }
+
 }
+
+
+
 
